[package]
name = "wgpu_sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
bytemuck = "1.23.1"
cgmath = "0.18.0"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
pollster = "0.4.0"
thiserror = "2.0.12"
tobj = "4.0.3"
wgpu = "=26.0.1"
winit = "0.30.11"
